# garmin_export

./: Cargo.toml  README.md  flake.nix
doc/: activity_format.md
scripts/: fit2gpx.sh  sync-from-device.clj  sync-from-device.sh
src/: activity.rs  client.rs  config.rs  error.rs  main.rs  rate_limiter.rs
