[package]
name = "garmin_export"
version = "0.1.0"
authors = ["David Wagner <wagdav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
log = "0.4"
regex = "1"
reqwest = { version="0.10", features=["blocking", "cookies", "json"] }
serde = "1.0"

[dev-dependencies]
serde_json = "1.0"
