[package]
name = "garmin_export"
version = "0.1.0"
authors = ["David Wagner <wagdav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
fitparser = "0.9"
log = "0.4"
regex = "1"
reqwest = { version="0.12", features=["blocking", "cookies", "json"] }
serde = "1.0"
zip = "2.2.3"

[dev-dependencies]
serde_json = "1.0"
